# travelling-salesman-problem

./: .gitignore  CMakeLists.txt  README.md  calculos.h  coordenadas  cromossomo.h  genetic  genetic.c  ordenacao.h  struct_e_param.h
deterministic/: deterministic.c
